enlazando index y cambiando <title>

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>PAGINA DALTO</title>
+    <title>PAGINA PARA EL CURSO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
     <!-- Esto el navegador no lo lee -->
     <p>Lorem ipsum dolor sit, commputadora controladora comandante amet consectetur adipisicing elit. Ex, laboriosam quos placeat assumenda, cumque dolorum nisi numquam animi soluta, cupiditate iusto rem neque perferendis optio? Quae deleniti incidunt dicta soydalto@gmail. dalto maxime. trola</p>
     <a href="https://youtube.com/soydalto"></a>
+    <script src="main.js"></script>
 </body>    
 </html>
